--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<html ng-app='strongtower'>
 <head>
   <meta charset='utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,22 +17,72 @@
   </title>
   <link href="img/favicon.ico" rel="shortcut icon">
   <link rel="shortcut icon" href="favicon.ico" />
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <!-- <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css"> -->
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css"> -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css" /> -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css" /> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css"> -->
   <link rel='stylesheet' href='./dist/all.css'/>
 </head>
-  <body>
+  <body ng-controller='mainCtrl'>
+    <header>
+      <div class="contact-bar">
+        <div class="call-now">
+          <a class="mobi" href="tel:4805555555">CALL US: (480) 555 - 5555</a>
+        </div>
+      </div>
+        <div
+        sticky body-class="body-sticky"
+        sticky-class="navbar-sticky"
+        media-query="min-width: 768px"
+        offset="-90"
+        class="navbar-wrap"
+        >
+          <div class="navbar">
+            <img src="img/logo.jpg" ui-sref='home' alt="Strong Tower Installations">
+            <button class='hamburger-btn' type="button" name="menu">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </button>
+            <ul class="navigation">
+              <li class="home-btn" ui-sref='home' ng-class="{ active: activeBtn('home') }">
+                HOME
+              </li>
+              <li class="services-btn" ui-sref='services' ng-class="{ active: activeBtn('services') }">
+                SERVICES
+              </li>
+              <li class="aboutus-btn" ui-sref='about' ng-class="{ active: activeBtn('about') }">
+                ABOUT
+              </li>
+              <li class="testimonials-btn" ui-sref='testimonials' ng-class="{ active: activeBtn('testimonials') }">
+                TESTIMONIALS
+              </li>
+              <li class="contact-btn" ui-sref='contact' ng-class="{ active: activeBtn('contact') }">
+                CONTACT US
+              </li>
+            </ul>
+          </div>
+        </div>
+    </header>
+    <div class="main-wrapper">
+      <ui-view>
+      </ui-view>
+    </div>
+    <footer class="footer">
 
-<h1>test</h1>
+    </footer>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src='extras/owl.carousel.min.js'></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0/angular-ui-router.min.js"></script>
+    <script src='extras/owl.carousel.min.js'></script>
+    <script src="extras/angular-owl-carousel-2.js"></script>
+    <script src="extras/sticky.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script> -->
     <script type='text/javascript' src='./dist/all.js'></script>
