--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css" />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css"> -->
   <link rel='stylesheet' href='./dist/all.css'/>
 </head>
@@ -30,7 +31,7 @@
     <header>
       <div class="contact-bar">
         <div class="call-now">
-          <a class="mobi" href="tel:4805555555">CALL US: (480) 555 - 5555</a>
+          <a href="tel:1-480-580-4495">CALL US: (480) 580-4495</a>
         </div>
       </div>
         <div
@@ -40,7 +41,7 @@
         offset="-90"
         class="navbar-wrap"
         >
-          <div class="navbar">
+          <div class="navbar-main">
             <img src="img/logo.jpg" ui-sref='home' alt="Strong Tower Installations">
             <button class='hamburger-btn' type="button" name="menu">
               <i class="fa fa-bars" aria-hidden="true"></i>
@@ -69,8 +70,72 @@
       <ui-view>
       </ui-view>
     </div>
-    <footer class="footer">
-
+    <footer>
+      <div class="container footer-info">
+        <div class="row">
+          <div class="col-sm-5 col-sm-offset-1">
+            <h2>ABOUT US</h2>
+            <p>We are insightful creators and builders who offer innovative solutions in alarms, cameras, home automation, and surround sound. Our mission is to install the latest and greateast technologies to deliver extraordinary value and security for you and your family.</p>
+          </div>
+          <div class="col-sm-4 col-sm-offset-1 contact">
+            <h2>CONTACT</h2>
+            <div>
+              <a href="https://www.google.com/maps/place/Gilbert,+AZ+85295/@33.3007877,-111.7538555,14z/data=!3m1!4b1!4m5!3m4!1s0x872bac6615ba7ac3:0x6c67e61e58ed8985!8m2!3d33.3073768!4d-111.7435799" target='_blank'>
+                <i class="fa fa-map-pin" aria-hidden="true"></i>
+                <span>Gilbert, Arizona 85295</span>
+              </a>
+            </div>
+            <div>
+              <a href="tel:1-480-580-4495">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <span>(480) 580-4495</span>
+              </a>
+            </div>
+            <div>
+              <a href="mailto:jesse@strongtowersecurity.co?subject=Hello%20Strong%20Tower%20Installations&amp;body=Hello%20Strong%20Tower%20Installations%2C%0A%0APlease%20contact%20me.%20I%27m%20interested%20in%20learning%20more.%0A%0AThank%20you%2C">
+              <i class="fa fa-envelope" aria-hidden="true"></i>
+              <span>jesse@strongtowersecurity.co</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container footer-social">
+        <div class="row">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-10">
+            <a href="#" class="footerlogo">
+              <img class='footerlogo' src="img/logo.jpg" ui-sref='home' alt="Strong Tower Installations">
+            </a>
+            <ul class="footerlinks">
+              <li>
+                <a class="home-btn" ui-sref='home' ng-class="{ active: activeBtn('home') }">HOME</a>
+              </li>
+              <li>
+                <a class="services-btn" ui-sref='services' ng-class="{ active: activeBtn('services') }">SERVICES</a>
+              </li>
+              <li>
+                <a class="aboutus-btn" ui-sref='about' ng-class="{ active: activeBtn('about') }">ABOUT</a>
+              </li>
+              <li>
+                <a class="testimonials-btn" ui-sref='testimonials' ng-class="{ active: activeBtn('testimonials') }">TESTIMONIALS</a>
+              </li>
+              <li>
+                <a class="contact-btn" ui-sref='contact' ng-class="{ active: activeBtn('contact') }">CONTACT US</a>
+              </li>
+            </ul>
+            <ul class="sociallinks">
+              <li>
+                <a href="https://www.facebook.com/strongtoweraz/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              </li>
+              <li>
+                <a href="https://linkedin.com/in/strongtoweraz/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-1"></div>
+        </div>
+      </div>
     </footer>
 
 
@@ -78,6 +143,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0/angular-ui-router.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src='extras/owl.carousel.min.js'></script>
     <script src="extras/angular-owl-carousel-2.js"></script>
     <script src="extras/sticky.min.js"></script>
