--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
     </header>
     <!-- main -->
     <div class="main-wrapper">
-      <ui-view>
+      <ui-view class="fade">
       </ui-view>
     </div>
     <!-- footer -->
@@ -157,9 +157,10 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" ></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-animate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src='extras/owl.carousel.min.js'></script>
     <script src="extras/angular-owl-carousel-2.js"></script>
