--- a/public/index.html
+++ b/public/index.html
@@ -95,20 +95,17 @@
             <h2>CONTACT</h2>
             <div>
               <a href="https://www.google.com/maps/place/Gilbert,+AZ+85295/@33.3007877,-111.7538555,14z/data=!3m1!4b1!4m5!3m4!1s0x872bac6615ba7ac3:0x6c67e61e58ed8985!8m2!3d33.3073768!4d-111.7435799" target='_blank'>
-                <i class="fa fa-map-pin" aria-hidden="true"></i>
-                <span>Gilbert, Arizona 85295</span>
+                <span><i class="fa fa-map-pin" aria-hidden="true"></i>Gilbert, Arizona 85295</span>
               </a>
             </div>
             <div>
               <a href="tel:1-480-580-4495">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>(480) 580-4495</span>
+                <span><i class="fa fa-phone" aria-hidden="true"></i>(480) 580-4495</span>
               </a>
             </div>
             <div>
               <a href="mailto:jesse@strongtowersecurity.co?subject=Hello%20Strong%20Tower%20Installations&amp;body=Hello%20Strong%20Tower%20Installations%2C%0A%0APlease%20contact%20me.%20I%27m%20interested%20in%20learning%20more.%0A%0AThank%20you%2C">
-              <i class="fa fa-envelope" aria-hidden="true"></i>
-              <span>jesse@strongtowersecurity.co</span>
+              <span> <i class="fa fa-envelope" aria-hidden="true"></i>jesse@strongtowersecurity.co</span>
               </a>
             </div>
           </div>
