--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="article" />
   <meta name="twitter:card" content="">
   <meta property="og:site_name" content="Strong Tower Installations">
-  <meta property="fb:app_id" content="" />
+  <meta property="fb:app_id" content="902009893274771" />
   <meta name="twitter:image:alt" content="Strong Tower Installations">
   <title>Strong Tower Installations
   </title>
@@ -27,8 +27,14 @@
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css"> -->
   <link rel='stylesheet' href='./dist/all.css'/>
 </head>
-  <body ng-controller='mainCtrl'>
-    <!-- facebook like btn -->
+
+<body>
+  <div class="temp">
+      <img class='footerlogo' src="img/logo.png" ui-sref='home' alt="Strong Tower Installations">
+  </div>
+</body>
+
+  <!-- <body ng-controller='mainCtrl'>
     <div id="fb-root"></div>
     <script>
     (function(d, s, id) {
@@ -39,7 +45,6 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
     </script>
-    <!-- header -->
     <header>
       <div class="contact-bar">
         <div class="call-now">
@@ -54,7 +59,7 @@
         class="navbar-wrap"
         >
           <div class="navbar-main">
-            <img src="img/logo.jpg" ui-sref='home' alt="Strong Tower Installations">
+            <img src="img/logo.png" ui-sref='home' alt="Strong Tower Installations">
             <button class='hamburger-btn' type="button" name="menu">
               <i class="fa fa-bars" aria-hidden="true"></i>
             </button>
@@ -78,12 +83,10 @@
           </div>
         </div>
     </header>
-    <!-- main -->
     <div class="main-wrapper">
       <ui-view class="fade">
       </ui-view>
     </div>
-    <!-- footer -->
     <footer>
       <div class="container footer-info">
         <div class="row">
@@ -116,7 +119,7 @@
           <div class="col-sm-1"></div>
           <div class="col-sm-10">
             <a href="#" class="footerlogo">
-              <img class='footerlogo' src="img/logo.jpg" ui-sref='home' alt="Strong Tower Installations">
+              <img class='footerlogo' src="img/logo.png" ui-sref='home' alt="Strong Tower Installations">
             </a>
             <ul class="footerlinks">
               <li>
@@ -150,7 +153,7 @@
           <div class="col-sm-1"></div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
 
 
