--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Adam Wehunt">
   <meta property="og:title" content="Strong Tower Installations">
   <meta property="og:description" content="Strong Tower Installations">
-  <meta property="og:image" content="">
+  <meta property="og:image" content="img/logo.png">
   <meta property="og:url" content="http://www.strongtowerinstallations.com">
   <meta property="og:type" content="article" />
   <meta name="twitter:card" content="">
@@ -28,13 +28,7 @@
   <link rel='stylesheet' href='./dist/all.css'/>
 </head>
 
-<body>
-  <div class="temp">
-      <img class='footerlogo' src="img/logo.png" ui-sref='home' alt="Strong Tower Installations">
-  </div>
-</body>
-
-  <!-- <body ng-controller='mainCtrl'>
+  <body ng-controller='mainCtrl'>
     <div id="fb-root"></div>
     <script>
     (function(d, s, id) {
@@ -153,7 +147,7 @@
           <div class="col-sm-1"></div>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
 
 
