--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         >
           <div class="navbar-main">
             <img src="img/logo.png" ui-sref='home' alt="Strong Tower Installations">
-            <button class='hamburger-btn' type="button" name="menu">
+            <button class='hamburger-btn' type="button" name="menu" ng-click="toggleNav()">
               <i class="fa fa-bars" aria-hidden="true"></i>
             </button>
             <ul class="navigation">
@@ -65,6 +65,25 @@
             </ul>
           </div>
         </div>
+      <div class="navbar-mobile" ng-class="{ collapsed: menuState=='collapsed', expanded: menuState=='expanded', collapsing: menuState=='collapsing' }" ng-style="{{menuHeight}}">
+          <ul class="navbar-mobile-nav">
+            <li>
+              <a class="home-btn" ui-sref='home' ng-click="toggleNav()" ng-class="{ active: activeBtn('home') }">HOME</a>
+            </li>
+            <li>
+              <a class="services-btn" ui-sref='services' ng-click="toggleNav()" ng-class="{ active: activeBtn('services') }">SERVICES</a>
+            </li>
+            <li>
+              <a class="aboutus-btn" ui-sref='about' ng-click="toggleNav()" ng-class="{ active: activeBtn('about') }">ABOUT</a>
+            </li>
+            <li>
+              <a class="testimonials-btn" ui-sref='testimonials' ng-click="toggleNav()" ng-class="{ active: activeBtn('testimonials') }">TESTIMONIALS</a>
+            </li>
+            <li>
+              <a class="contact-btn" ui-sref='contact' ng-click="toggleNav()" ng-class="{ active: activeBtn('contact') }">CONTACT US</a>
+            </li>
+        </ul>
+      </div>
     </header>
     <div class="main-wrapper">
       <ui-view class="fade">
